--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -658,6 +658,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="1lk-u5-yWs"/>
                     <connections>
+                        <outlet property="cartCountLabel" destination="2pj-PB-74g" id="EI5-Nc-tAP"/>
                         <outlet property="countryOverlayView" destination="2Xs-5a-Py6" id="gfW-UH-P3j"/>
                         <outlet property="countryRComponent" destination="wMJ-Xf-01h" id="FOh-8I-ddh"/>
                         <outlet property="countryViewYAxiscenter" destination="HE6-z5-Mzh" id="AQd-Ra-T2f"/>
